@@ -1,9 +1,9 @@
+- new method 'perl5', returns a string that can be eval'ed into a new PCR object
+
 - match variables are available inside the rule: $0, $1
 - /(.)*/ returns an array in @$0
 
 - built-in rules: alpha, alnum, ...
-
-- faster Rule grammar
 
 - fixed grammar bug: '$var := (xxx)' is: '$<var> := (xxx)'
 
@@ -14,6 +14,7 @@
 
   $rule = sub { Grammar->rule_method( @_ ) }
 
+- faster Rule grammar
 - Simplified 'match', 'capture' keys in internal Match
 
 0.01 
